--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
