--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^2.1.10",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "sass": "^1.50.1",
     "vue": "^3.2.25",
     "vue-router": "4",
     "vuex": "^4.0.2"
