--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^17.0.25",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "element-plus": "^2.1.10",
     "less": "^4.1.2",
