--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json-server": "json-server __json_server__mock__/db.json --watch --port 3001 --middlewares ./__json_server__mock__/middleware.js"
   },
   "dependencies": {
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "axios": "^0.26.1",
     "element-plus": "^2.1.10",
+    "json-server": "^0.17.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "sass": "^1.50.1",
